# QMLOpenGLVTK

./: CMakeLists.txt
app/: MainWindow.cpp  MainWindow.h  main.cpp
include/: QmlOpenGLWindowInteractor.h  QmlVTKOpenGLRenderWindowInteractor.h  QmlVTKRenderWindowInteractor.h
resources/: app.qml
src/: QmlOpenGLWindowInteractor.cpp  QmlVTKOpenGLRenderWIndowInteractor.cpp
